src/objects/DSCORGPKG__Trigger__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Categories__c</fullName>
        <label>Topics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Scoop_Type__c</fullName>
        <label>Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DiscoverOrg Scoop</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Scoop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Scoops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>